fix scrollbar in category list

--- a/frontend/src/components/expensesCategoryContainer/expensesCategoryContainer.css
+++ b/frontend/src/components/expensesCategoryContainer/expensesCategoryContainer.css
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    padding: 20px 54px;
+    /* padding: 20px 54px; */
+    padding-bottom: 20px;
     background: #FFFFFF;
     box-shadow: 10px 20px 20px rgba(82, 123, 185, 0.1);
     border-radius: 10px;
@@ -14,11 +15,24 @@
     position: relative;
 }
 
+.expenses-category-header-container {
+    width: 100%;
+    padding: 20px 54px 0 54px;
+    box-sizing: border-box;
+}
+
+.expenses-category-container-list-container {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    padding: 0 54px;
+    box-sizing: border-box;
+}
+
 .expenses-category-container-list {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
     box-sizing: border-box;
 }
